# apiculture

./: .gitignore  package.json
frontend/: .env.production  capacitor.config.ts  index.html  ionic.config.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: .env.development  App.tsx  vite-env.d.ts
frontend/src/api/: index.ts  index.tsx
frontend/src/components/: MainContainer.tsx  Navigate.tsx  index.tsx
frontend/src/contexts/: AuthContext.tsx  GeneralInfoContext.tsx  HiveSelectionContext.ts
frontend/src/hooks/: useAuth.ts  useGeneralInfo.ts  usePhotoGallery.ts  useUser.ts
frontend/src/models/: apiary.ts  hive.ts  index.ts  user.ts
frontend/src/pages/: ApiPageHeader.tsx  NotFound.tsx  Page.tsx  PageLoading.tsx  Tab1.tsx  Tab2.tsx  index.tsx
frontend/src/theme/: main.css
server/: Dockerfile  package-lock.json  package.json  pyproject.toml  scripts.py  serverless.yml
server/apiculture/: database.py  vercel.json
server/apiculture/api/: __init__.py  auth.py  schemas.py
server/apiculture/config/: __init__.py  settings.toml
server/apiculture/dal/: command.py  errors.py  query.py
server/apiculture/models/: __init__.py  core.py  enum.py
server/utils/: data.py  scripts.py
ui/: .env.dev  package-lock.json  package.json
ui/public/: index.html
ui/src/: App.tsx
ui/src/api/: auth.js  index.js  index.tsx
ui/src/components/: Hive.js  ProfileMenu.tsx  RequireLogin.js
ui/src/contexts/: AuthContext.tsx  index.js
ui/src/hooks/: useAuth.ts  useLocalStorage.ts
ui/src/models/: apiary.ts  hive.ts  user.ts
(+91 files in other folders)
