    [tool.poetry]
name = "apiculture"
version = "0.1.0"
description = ""
authors = ["Aleksandar Stefanov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
dynaconf = "^3.2.4"
sqlalchemy = "^2.0.23"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-auth-middleware = "^1.0.2"
mangum = "^0.17.0"
boto = "^2.49.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"
isort = "^5.13.2"
pylint = "^3.0.3"
ipython = "^8.18.1"
mypy = "^1.7.1"

[tool.isort]
profile = "black"

#[tool.black]
#profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
